--- a/CaveGenerator.CSharp.csproj
+++ b/CaveGenerator.CSharp.csproj
@@ -63,8 +63,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\FPSController\Scripts\CharacterController.cs" />
+    <Compile Include="Assets\FPSController\Scripts\MiniMap.cs" />
     <Compile Include="Assets\FPSController\Scripts\MouseLook.cs" />
+    <Compile Include="Assets\FPSController\Scripts\SimpleCharacterController.cs" />
     <Compile Include="Assets\ProceduralCaveGenerator\Scripts\CaveGenerator.cs" />
     <Compile Include="Assets\ProceduralCaveGenerator\Scripts\Cell.cs" />
   </ItemGroup>
